Made changes to Splash Screen

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,6 +20,7 @@
         android:src="@drawable/artista"
         android:scaleType="fitCenter"
         android:layout_marginTop="150dp"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
